<resources>
    <string name="app_name">KyrgyzMate</string>
    <string name="kyrgyzmate">KyrgyzMate</string>
    <string name="courses">Courses</string>
    <string name="translator">Translator</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="status">Status</string>
    <string name="e_mail">E-mail</string>
    <string name="group">Group</string>
    <string name="language_level">Level</string>
    <string name="translate">Translate</string>
    <string name="camera">Camera</string>

    // Actions
    <string name="action_open_gmail">Open Gmail</string>
    <string name="action_resend">Resend</string>
    <string name="action_ok">Ok</string>
    <string name="action_no">No</string>

    // Titles
    <string name="title_deeplink_to_pass_registration">We\'ve sent the link to your gmail address, please confirm your email address</string>
    <string name="title_link_to_reset_password">We\'ve sent the link to your gmail address</string>
    <string name="groups">Groups</string>
    <string name="title_unfinished_registration">You have not finished registration process. Do you want to continue it?</string>
    <string name="title_email_is_not_confirmed">To finish your registration, please confirm your email address</string>

    // Errors
    <string name="error_no_internet">No internet connection!!</string>
    <string name="error_bad_internet_connection">Bad internet connection!!</string>
    <string name="error_failed_to_register">Failed registration, please try again</string>
    <string name="error_invalid_email_address">Invalid email address</string>
    <string name="error_wrong_credentials">Wrong credentials</string>
    <string name="error_email_already_exists">Email already exists</string>
    <string name="error_users_with_current_email_exists">Users with current email exists</string>
    <string name="error_unknown_error">Ups, something went wrong</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="last_topic_passed">Last topic passed</string>
    <string name="you_have_created_no_groups">You have created no groups...</string>
    <string name="enter">Enter...</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="create">Create</string>
    <string name="new_group">New Group</string>
    <string name="no_members_yet">No members yet</string>
    <string name="capture">Capture</string>

</resources>