<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="30dp">

        <ImageButton
            android:id="@+id/arrowBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:background="#00000000"
            android:layout_gravity="top"/>

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dp_3x"
            android:textColor="@color/action_color"/>

        <TextView
            style="@style/TextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/group_name"
            android:textAlignment="viewStart"
            android:textColor="@color/field_description_color"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="@dimen/dp_1x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/enter"
                android:inputType="text"
                style="@style/CustomTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2x"
            android:text="@string/group_description"
            android:textAlignment="viewStart"
            android:textColor="@color/field_description_color"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupDescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="@dimen/dp_1x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/enter"
                android:inputType="text"
                android:maxLines="5"
                style="@style/CustomTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_16dp_bg"
            android:backgroundTint="@color/action_color"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:padding="@dimen/dp_2x"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_3x"/>

    </LinearLayout>

</ScrollView>