<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/input_field_border_color"
    android:paddingBottom="80dp"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/rounded_24dp_bg"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_horizontal"
        android:elevation="8dp"
        android:outlineProvider="background"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="62dp">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test_profile"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First and Last Name"
            android:textStyle="bold"
            style="@style/TextSubtitle"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:elevation="24dp"/>

        <TextView
            android:id="@+id/roleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lecturer"
            style="@style/TextBody"
            android:layout_marginTop="4dp"
            android:textColor="@color/input_hint_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="@dimen/dp_1x"
            android:background="@drawable/rounded_info_container_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                style="@style/TextCaption"
                android:textColor="@color/input_hint_color" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sultan"
                android:textAlignment="center"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/TextCaption"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginVertical="@dimen/dp_1x"
                android:background="@color/input_hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                style="@style/TextCaption"
                android:textColor="@color/input_hint_color"/>

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="Bekmuratov"
                android:textAlignment="center"
                style="@style/TextCaption"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginVertical="@dimen/dp_1x"
                android:background="@color/input_hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                style="@style/TextCaption"
                android:textColor="@color/input_hint_color"/>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/TextCaption"
                android:textAlignment="center"
                android:text="sultan.bekmuratov@alatoo.edu.kg"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_24dp_bg"
            android:backgroundTint="@color/input_field_border_color"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            style="@style/TextBody"/>

    </LinearLayout>

</ScrollView>