<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_30dp"
            android:gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="43dp">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/test_profile"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/steakButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="10dp"
                app:drawableTopCompat="@drawable/ic_fire"
                android:text="Steak"
                android:layout_marginStart="10dp"
                style="@style/TextSmall"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/vocabularyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="10dp"
                app:drawableTopCompat="@drawable/ic_vocabulary"
                android:text="Vocabulary"
                style="@style/TextSmall"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/myPlanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="10dp"
                app:drawableTopCompat="@drawable/ic_notebook"
                android:text="Vocabulary"
                style="@style/TextSmall"
                android:textAlignment="center"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="@dimen/dp_3x"
            android:background="@drawable/rounded_info_container_bg">

            <TextView
                android:id="@+id/firstNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                style="@style/TextBody"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/firstNameTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/firstNameTitle"
                app:layout_constraintStart_toEndOf="@id/firstNameTitle"
                app:layout_constraintTop_toTopOf="@id/firstNameTitle"
                tools:text="Some name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/lastNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                style="@style/TextBody"
                android:layout_marginTop="@dimen/dp_2x"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameTitle"/>

            <TextView
                android:id="@+id/lastNameTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/lastNameTitle"
                app:layout_constraintStart_toEndOf="@id/lastNameTitle"
                app:layout_constraintTop_toTopOf="@id/lastNameTitle"
                tools:text="Some last name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/statusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                style="@style/TextBody"
                android:layout_marginTop="@dimen/dp_2x"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameTitle"/>

            <TextView
                android:id="@+id/statusTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/statusTitle"
                app:layout_constraintStart_toEndOf="@id/statusTitle"
                app:layout_constraintTop_toTopOf="@id/statusTitle"
                tools:text="Student"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                style="@style/TextBody"
                android:layout_marginTop="@dimen/dp_2x"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusTitle"/>

            <TextView
                android:id="@+id/emailTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/emailTitle"
                app:layout_constraintStart_toEndOf="@id/emailTitle"
                app:layout_constraintTop_toTopOf="@id/emailTitle"
                tools:text="somethingdoto@gmail.com"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTitle"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_8dp_bg"
                android:backgroundTint="@color/action_color"
                android:padding="@dimen/dp_1x"
                android:text="Edit"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="@dimen/dp_3x"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_info_container_bg">

            <TextView
                android:id="@+id/groupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                style="@style/TextBody"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/groupTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/groupTitle"
                app:layout_constraintStart_toEndOf="@id/groupTitle"
                app:layout_constraintTop_toTopOf="@id/groupTitle"
                tools:text="COM-21/Ruslan Isaev"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/levelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_level"
                style="@style/TextBody"
                android:layout_marginTop="@dimen/dp_2x"
                android:textColor="@color/application_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groupTitle"/>

            <TextView
                android:id="@+id/levelTextView"
                style="@style/TextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/levelTitle"
                app:layout_constraintStart_toEndOf="@id/levelTitle"
                app:layout_constraintTop_toTopOf="@id/levelTitle"
                tools:text="Upper-Intermediate"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTitle"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_8dp_bg"
            android:backgroundTint="@color/teal_700"
            android:padding="@dimen/dp_1x"
            android:text="Log out"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>